--- a/setup.cfg
+++ b/setup.cfg
@@ -2,14 +2,11 @@
 ignore=E501,E402
 exclude=build,debian,docs
 
-[flakes]
-flakes-exclude-packages=tests
-
 [lint]
 lint-exclude-packages=tests
 lint-disable=C0301,R0902
 
 [build_sphinx]
-source-dir = docs/source
-build-dir = docs/build
+source-dir = docs
+build-dir = docs/_build
 all_files = 1
