--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: aptly_cli
+Source: aptly-cli
 Section: python
 Priority: extra
-Maintainer: Tim Susa <christian_richter@gmx.de>
+Maintainer: Tim Susa <timsusa@gmx.de>
 Build-Depends: debhelper (>= 9), python, dh-virtualenv, python-dev
 Standards-Version: 3.9.5
 
-Package: aptly_cli
+Package: aptly-cli
 Architecture: amd64
 Depends: ${python:Depends}, ${misc:Depends}, acl
 Description: a tool to remotely request aptly server calls
