--- a/Manifest.in
+++ b/Manifest.in
@@ -1,8 +1,6 @@
 
 include debian/*
-include contrib/*
-include run.py
-include rest-cli.py
+include aptly_api_cli.py
 include requirements.txt
 include TODO.md
 include README.md
