HOD-444 let prefixes for mirrors read out from config

--- a/etc/aptly-cli.conf
+++ b/etc/aptly-cli.conf
@@ -1,4 +1,5 @@
+# aptly-cli config file
 [general]
 basic_url=http://localhost
 port=:9003
-
+prefixes_mirrors=cloudera, erlang, mongodb2, mongodb, nginx, puppetmaster, rabbitmq, redis, saltstack2014.7, saltstack2015.5, saltstack, git
