HOD-444 new feature: get_last_packages(), to find sorted versions of packages by reponame, package prefix and postfix

--- a/etc/aptly-cli.conf
+++ b/etc/aptly-cli.conf
@@ -3,3 +3,5 @@
 basic_url=http://localhost
 port=:9003
 prefixes_mirrors=cloudera, erlang, mongodb2, mongodb, nginx, puppetmaster, rabbitmq, redis, saltstack2014.7, saltstack2015.5, saltstack, git
+repos_to_clean=unstable-repo, stable-repo
+package_prefixes=cluster-manager, puppet-config, ingest-api, camus-etl, aptly-cli
