HOD-444 new feature: clean out last packages by prefix and reponame

--- a/etc/aptly-cli.conf
+++ b/etc/aptly-cli.conf
@@ -5,3 +5,5 @@ port=:9003
 prefixes_mirrors=cloudera, erlang, mongodb2, mongodb, nginx, puppetmaster, rabbitmq, redis, saltstack2014.7, saltstack2015.5, saltstack, git
 repos_to_clean=unstable-repo, stable-repo
 package_prefixes=cluster-manager, puppet-config, ingest-api, camus-etl, aptly-cli
+save_last_pkg=10
+save_last_snap=3
