HOD-444 final commit

--- a/etc/aptly-cli.conf
+++ b/etc/aptly-cli.conf
@@ -2,7 +2,7 @@
 [general]
 basic_url=http://localhost
 port=:9003
-prefixes_mirrors=cloudera, erlang, mongodb2, mongodb, nginx, puppetmaster, rabbitmq, redis, saltstack2014.7, saltstack2015.5, saltstack, git
+prefixes_mirrors=cloudera, erlang, mongodb2, mongodb_, nginx, puppetmaster, rabbitmq, redis, saltstack2014.7, saltstack2015.5, saltstack_, git
 repos_to_clean=unstable-repo, stable-repo
 package_prefixes=cluster-manager, puppet-config, ingest-api, camus-etl, aptly-cli
 save_last_pkg=10
