HOD-444 new feature: decideFor release to 3rdparty production

--- a/etc/aptly-cli.conf
+++ b/etc/aptly-cli.conf
@@ -7,3 +7,9 @@ repos_to_clean=unstable-repo, stable-repo
 package_prefixes=cluster-manager, puppet-config, ingest-api, camus-etl, aptly-cli
 save_last_pkg=10
 save_last_snap=3
+
+[3rd_party]
+# 3rd party s3 buckets to publish switch to
+repos=3rdparty-eu-west-1, 3rdparty-us-east-1
+# Pre and postfix of the staging snapshots
+staging_snap_pre_post=3rdparty-s3-repo, 3rdparty-staging_snapshot
